update: implemented portfolio-handler
